@@ -6569,7 +6569,12 @@ upvar #0 [.tbl itemlistvar] itemList
         <code>-1</code> if they were last sorted with the <code><b><a href=
         "#sort">sort</a></b></code> command or haven't been sorted at all, or
         the sort information was reset by invoking <code><b><a href=
-        "#resetsortinfo">resetsortinfo</a></b></code>.</dd>
+        "#resetsortinfo">resetsortinfo</a></b></code>.&nbsp; If called from
+        within the command specified as the value of the
+        <code><b>-sortcommand</b></code> <a href="#sortcommand">widget</a> or
+        <a href="#col_sortcommand">column</a> configuration option, then the
+        return value of this subcommand refers to the sorting in progress
+        rather than the most recent one.</dd>
 
         <dt><br>
         <a name="sortcolumnlist"></a><code><i>pathName</i>
@@ -6583,7 +6588,12 @@ upvar #0 [.tbl itemlistvar] itemList
         empty string if they were last sorted with the <code><b><a href=
         "#sort">sort</a></b></code> command or haven't been sorted at all, or
         the sort information was reset by invoking <code><b><a href=
-        "#resetsortinfo">resetsortinfo</a></b></code>.</dd>
+        "#resetsortinfo">resetsortinfo</a></b></code>.&nbsp; If called from
+        within the command specified as the value of the
+        <code><b>-sortcommand</b></code> <a href="#sortcommand">widget</a> or
+        <a href="#col_sortcommand">column</a> configuration option, then the
+        return value of this subcommand refers to the sorting in progress
+        rather than the most recent one.</dd>
 
         <dt><br>
         <a name="sortorder"></a><code><i>pathName</i>
@@ -6596,7 +6606,12 @@ upvar #0 [.tbl itemlistvar] itemList
         "#sortbycolumnlist">sortbycolumnlist</a></b></code> command, or an
         empty string if the items haven't been sorted at all, or the sort
         information was reset by invoking <code><b><a href=
-        "#resetsortinfo">resetsortinfo</a></b></code>.</dd>
+        "#resetsortinfo">resetsortinfo</a></b></code>.&nbsp; If called from
+        within the command specified as the value of the
+        <code><b>-sortcommand</b></code> <a href="#sortcommand">widget</a> or
+        <a href="#col_sortcommand">column</a> configuration option, then the
+        return value of this subcommand refers to the sorting in progress
+        rather than the most recent one.</dd>
 
         <dt><br>
         <a name="sortorderlist"></a><code><i>pathName</i>
@@ -6611,7 +6626,12 @@ upvar #0 [.tbl itemlistvar] itemList
         empty string if the items were last sorted with the <code><b><a href=
         "#sort">sort</a></b></code> command or haven't been sorted at all, or
         the sort information was reset by invoking <code><b><a href=
-        "#resetsortinfo">resetsortinfo</a></b></code>.</dd>
+        "#resetsortinfo">resetsortinfo</a></b></code>.&nbsp; If called from
+        within the command specified as the value of the
+        <code><b>-sortcommand</b></code> <a href="#sortcommand">widget</a> or
+        <a href="#col_sortcommand">column</a> configuration option, then the
+        return value of this subcommand refers to the sorting in progress
+        rather than the most recent one.</dd>
 
         <dt><br>
         <a name="togglecolumnhide"></a><code><i>pathName</i>
